--- a/slides/MBL/index.html
+++ b/slides/MBL/index.html
@@ -11871,9 +11871,8 @@ a.anchor-link {
 <h3 id="Course-outline:">Course outline:<a class="anchor-link" href="#Course-outline:">&#182;</a></h3><h4 id="part-I">part I<a class="anchor-link" href="#part-I">&#182;</a></h4><ol>
 <li>introduction to RAD-seq assembly</li>
 <li>ipyrad installation and command line (CLI)</li>
-<li>introductory tutorial with CLI</li>
 <li>In depth look at the parameters</li>
-<li>advanced tutorial with CLI</li>
+<li>introductory tutorials with CLI</li>
 </ol>
 <hr>
 <h4 id="part-II">part II<a class="anchor-link" href="#part-II">&#182;</a></h4><ol>
@@ -12075,36 +12074,6 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img  src="../slide-images/MBL-input.png"></p>
-
-</div>
-</div>
-</div></section><section>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><img  src="../slide-images/MBL-outline.png"></p>
-
-</div>
-</div>
-</div></section><section>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><img  src="../slide-images/MBL-params.png"></p>
-
-</div>
-</div>
-</div></section><section>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Running-ipyrad-(command-line)">Running ipyrad (command line)<a class="anchor-link" href="#Running-ipyrad-(command-line)">&#182;</a></h3><ul>
 <li>You must <em>always</em> specify a params file with <code>-p</code>. </li>
 <li>To run steps of the assembly use <code>-s</code>. </li>
@@ -12121,11 +12090,54 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="3.-Introductory-tutorials">3. Introductory tutorials<a class="anchor-link" href="#3.-Introductory-tutorials">&#182;</a></h2><p><img  src="../slide-images/MBL-tut1.png"></p>
+<h2 id="3.-The-parameters-of-ipyrad">3. The parameters of ipyrad<a class="anchor-link" href="#3.-The-parameters-of-ipyrad">&#182;</a></h2><p><img  src="../slide-images/MBL-outline.png"></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img  src="../slide-images/MBL-input.png"></p>
 
 </div>
 </div>
 </div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img  src="../slide-images/MBL-params.png"></p>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="4.-Introductory-tutorials">4. Introductory tutorials<a class="anchor-link" href="#4.-Introductory-tutorials">&#182;</a></h2><p><img  src="../slide-images/MBL-tut1.png"></p>
+
+</div>
+</div>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
