--- a/slides/MBL/index.html
+++ b/slides/MBL/index.html
@@ -12094,19 +12094,26 @@ a.anchor-link {
 
 </div>
 </div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span></span> 
-</pre></div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="../slide-images/drawing-1.svg"></p>
 
 </div>
 </div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="../slide-images/drawing-2.svg"></p>
 
+</div>
+</div>
 </div></section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -12144,8 +12151,8 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Python,-jupyter,-and-reproducible-science">Python, jupyter, and reproducible science<a class="anchor-link" href="#Python,-jupyter,-and-reproducible-science">&#182;</a></h2><ul>
-<li>Widely used in big-data science (Google, Facebook, Github, etc.)</li>
-<li>Many libraries linking compiled code (e.g., Numpy, Scipy, Theano)</li>
+<li>Widely used in <em>big-data</em> science (Google, Facebook, Github, etc.)</li>
+<li>Many libraries link compiled code-base (e.g., Numpy, Scipy, Theano)</li>
 <li>Easy integration with databases (e.g., HDF5, MYSQL)</li>
 <li>Just-in-time compilation (Numba library) </li>
 <li>Easy code-sharing/reproducibility/exploring with Jupyter</li>
