--- a/slides/MBL/index.html
+++ b/slides/MBL/index.html
@@ -12150,7 +12150,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Python,-jupyter,-and-reproducible-science">Python, jupyter, and reproducible science<a class="anchor-link" href="#Python,-jupyter,-and-reproducible-science">&#182;</a></h2><ul>
+<h2 id="1.-Python,-jupyter,-and-reproducible-science">1. Python, jupyter, and reproducible science<a class="anchor-link" href="#1.-Python,-jupyter,-and-reproducible-science">&#182;</a></h2><ul>
 <li>Widely used in <em>big-data</em> science (Google, Facebook, Github, etc.)</li>
 <li>Many libraries link compiled code-base (e.g., Numpy, Scipy, Theano)</li>
 <li>Easy integration with databases (e.g., HDF5, MYSQL)</li>
@@ -12290,7 +12290,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="introduction-to-parallel-computing-in-Python">introduction to parallel computing in Python<a class="anchor-link" href="#introduction-to-parallel-computing-in-Python">&#182;</a></h3><p>ipyrad makes use of the ipyparallel library for large-scale parallel computing which is particularly designed for <em>interactive</em> parallel computing in jupyter notebooks.</p>
+<h2 id="2.-introduction-to-parallel-computing-in-Python">2. introduction to parallel computing in Python<a class="anchor-link" href="#2.-introduction-to-parallel-computing-in-Python">&#182;</a></h2><p>ipyrad makes use of the ipyparallel library for large-scale parallel computing which is particularly designed for <em>interactive</em> parallel computing in jupyter notebooks.</p>
 
 </div>
 </div>
@@ -12420,7 +12420,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="The-ipyrad-API">The ipyrad API<a class="anchor-link" href="#The-ipyrad-API">&#182;</a></h2>
+<h2 id="3.-The-ipyrad-API">3. The ipyrad API<a class="anchor-link" href="#3.-The-ipyrad-API">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -12473,7 +12473,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Empirical-data-examples">Empirical data examples<a class="anchor-link" href="#Empirical-data-examples">&#182;</a></h2><p>Open the link below for one of the following notebook. They're very similar, the first is a group of plants, the second is a group of birds, so choose your favorite. We will then each <strong>create a new notebook from scratch</strong> by copy/pasting code from these notebooks to produce our own new analysis notebook (run either on your laptop or on the cluster).</p>
+<h2 id="4.-Empirical-data-examples">4. Empirical data examples<a class="anchor-link" href="#4.-Empirical-data-examples">&#182;</a></h2><p>Open the link below for one of the following notebook. They're very similar, the first is a group of plants, the second is a group of birds, so choose your favorite. We will then each <strong>create a new notebook from scratch</strong> by copy/pasting code from these notebooks to produce our own new analysis notebook (run either on your laptop or on the cluster).</p>
 <p><a href="http://nbviewer.jupyter.org/github/dereneaton/ipyrad/blob/master/tests/cookbook-empirical-API-1-pedicularis.ipynb">Pedicularis ipyrad API notebook</a></p>
 <p><a href="http://nbviewer.jupyter.org/github/dereneaton/ipyrad/blob/master/tests/cookbook-empirical-API-2-Finches.ipynb">Finch ipyrad API notebook</a></p>
 
@@ -12485,7 +12485,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Empirical-downstream-analyses">Empirical downstream analyses<a class="anchor-link" href="#Empirical-downstream-analyses">&#182;</a></h2><p>The ipyrad analysis toolkit provides additional downstream formatting and filtering of data sets, as well as wrapper tools that allow running external software in efficient and reproducible ways.</p>
+<h2 id="5.-Empirical-downstream-analyses">5. Empirical downstream analyses<a class="anchor-link" href="#5.-Empirical-downstream-analyses">&#182;</a></h2><p>The ipyrad analysis toolkit provides additional downstream formatting and filtering of data sets, as well as wrapper tools that allow running external software in efficient and reproducible ways.</p>
 
 </div>
 </div>
@@ -12536,6 +12536,12 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Success">Success<a class="anchor-link" href="#Success">&#182;</a></h3><p>You are now ready to go on and assemble RAD-seq data sets to your very specific and particular needs, and to keep a very detailed record of what you did to share with your friends and cruel reviewers.</p>
+<h3 id="Final-advice:">Final advice:<a class="anchor-link" href="#Final-advice:">&#182;</a></h3><ul>
+<li>Look at your data!</li>
+<li>Explore your assembly (different parameters)</li>
+<li>Run exploratory analyses (structure, raxml)</li>
+<li>Keep yourself organized.</li>
+</ul>
 
 </div>
 </div>
